--- a/_config.yml
+++ b/_config.yml
@@ -206,7 +206,7 @@ defaults:
   # _pages
   - scope:
       path: ""
-      type: pages
+      type: index
     values:
       layout: single
       author_profile: true
