--- a/_config.yml
+++ b/_config.yml
@@ -120,8 +120,7 @@ author:
 # Reading Files
 include:
   - .htaccess
-  - _index
-  #- _pages
+  - _pages
   - files
 exclude:
   - "*.sublime-project"
@@ -206,7 +205,7 @@ defaults:
   # _pages
   - scope:
       path: ""
-      type: index
+      type: pages
     values:
       layout: single
       author_profile: true
