--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=djjjZxAAAAAJ&hl=it&oi=ao"
-  email            : "sara.pettinari@unicam.it"
+  email            : "sara.pettinari@gssi.it"
   researchgate     :  "https://www.researchgate.net/profile/Sara-Pettinari-2"
   uri              :
   bitbucket        :
