--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,13 @@ analytics:
   google:
     tracking_id          :
 
+publication_category:
+  books:
+      title: 'Books'
+  manuscripts:
+      title: 'Journal Articles'    
+  conferences:
+      title: 'Conference Papers'
 
 # Site Author
 author:
@@ -127,6 +134,7 @@ exclude:
   - "*.sublime-workspace"
   - .asset-cache
   - .bundle
+  - .github
   - .jekyll-assets-cache
   - .sass-cache
   - CHANGELOG
