--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Sara Pettinari"
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Sara"
 description              : &description "personal description"
@@ -186,6 +186,9 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
+  news:
+    output: true
+    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
@@ -195,6 +198,10 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  tools:
+    output: true
+    permalink: /:collection/:path/
+
 
 
 # Defaults
@@ -250,6 +257,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _tools
+  - scope:
+      path: ""
+      type: tools
+    values:
+      layout: single
       author_profile: true
       share: true
 
