--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "sara_pettinari"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
